--- a/speakers/c03x_sorkin.html
+++ b/speakers/c03x_sorkin.html
@@ -31,8 +31,8 @@
 	</main>
 
 	<footer>
-		Prepared by: Rajan Tripathi
-		Date: 03/07/2022
+		<p>Prepared by: Rajan Tripathi</p>
+		<p>Date: 03/07/2022</p>
 	</footer>
 
 	
